--- a/app/src/main/res/layout/text_image_input_view.xml
+++ b/app/src/main/res/layout/text_image_input_view.xml
@@ -11,7 +11,8 @@
         android:layout_height="48dp"
         android:src="@android:drawable/ic_menu_camera"
         android:layout_gravity="left|bottom"
-        android:baselineAlignBottom="true"/>
+        android:baselineAlignBottom="true"
+        android:layout_marginBottom="4dp"/>
 
     <View
         android:layout_width="match_parent"
@@ -23,11 +24,13 @@
         tool:layout_height="200dp"/>
 
     <com.kanj.apps.hybridtextimageviews.MaxHeightScrollView
+        android:id="@+id/text_image_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tool:visibility="gone"
         android:layout_marginLeft="48dp"
-        android:layout_marginRight="60dp" >
+        android:layout_marginRight="60dp"
+        android:layout_gravity="bottom">
         <include layout="@layout/edit_text_image_adapter_scroll_view"/>
     </com.kanj.apps.hybridtextimageviews.MaxHeightScrollView>
 
@@ -38,5 +41,6 @@
         android:padding="6dp"
         android:textStyle="bold"
         android:layout_gravity="right|bottom"
-        android:text="SEND" />
+        android:text="SEND"
+        android:layout_marginBottom="4dp"/>
 </android.support.v7.widget.CardView>
